--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,49 @@ a {
   z-index: 1;
 }
 
+
+.custom-animation {
+  width: 100px;
+  height: 150px;
+  animation: animate 5s ease-in-out;
+  
+}
+
+@keyframes animate {
+  0% {
+    height: 150px;
+    width: 100px;
+    transform: translate(-50% ,-50%);
+  }
+
+  20% {
+    height: 300px;
+    width: 300px;
+    transform: translate(-50% ,-50%);
+  }
+
+  40% {
+    height: 300px;
+    width: 300px;
+    transform: translate(-50% ,-50%);
+
+  }
+
+  70% {
+    width: 2000px;
+    height: 2000px;
+    transform: translate(-50% ,-50%);
+  }
+
+  100% {
+    width: 2000px;
+    height: 2000px;
+    transform: translate(-50% ,-100vh);
+  }
+}
+
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
