--- a/src/index.css
+++ b/src/index.css
@@ -2,51 +2,93 @@
   color: white !important;
 }
 
-.custom-hover {
-  position: relative;
-  color: white;
-  transition: color 500ms ease-in-out;
-  
-}
 
 a {
   text-decoration: none !important;
 }
 
+.custom-hover {
+  position: relative;
+  color: white;
+  overflow: hidden;
+  /* border: solid 1px; */
+  outline: none !important;
+  z-index: 99;
+  background: white;
+}
+
 .custom-hover:hover {
-  color: black;
+  color:  black;
 }
 
 .custom-hover::before {
   content: '';
   position: absolute;
   top: 0;
-  bottom: 0;
   left: 0;
-  right: 0;
-  background-color: white;
-  border-radius: inherit;
-  z-index: -1;
-  width: 0;
+  width: 100%;
   height: 100%;
-
-  transform-origin: left center; /* Transform origin at left center */
-  transform: scaleY(0); /* Scale height to 0 initially */
-  /* transform: ; */
-  transition: width 1000ms ease-in-out, transform 500ms ease-in-out;;
+  background: black;
+  z-index: -1;
+  border-radius: 10%;
+  transform-origin: left;
+  transition: transform 500ms ease-in-out;
+  transform: scaleX(1);
 }
 
 .custom-hover:hover::before,
 .custom-hover:focus::before
  {
-  /* transform: ; */
-  width: 100%;
-  transform: scaleY(1);
+   transform-origin: right;
+   transition: transform 0.5s ease-in-out;
+   transform: scaleX(0);
 }
 
-.custom-hover {
-  z-index: 1;
+
+
+
+.reverse-custom-hover {
+  position: relative;
+  color: black;
+  overflow: hidden;
+  border: solid 1px;
+  outline: none !important;
+  z-index: 99;
+  background: black;
 }
+
+.reverse-custom-hover:hover {
+  color: white;
+}
+
+.reverse-custom-hover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  z-index: -1;
+  border-radius: 10%;
+  transform-origin: left;
+  transition: transform 500ms ease-in-out;
+  transform: scaleX(1);
+}
+
+.reverse-custom-hover:hover::before,
+.reverse-custom-hover:focus::before
+ {
+   transform-origin: right;
+   transition: transform 0.5s ease-in-out;
+   transform: scaleX(0);
+}
+
+
+
+
+
+
 
 
 .custom-animation {
@@ -60,32 +102,45 @@ a {
   0% {
     height: 150px;
     width: 100px;
-    transform: translate(-50% ,-50%);
+    top: 50%;
   }
 
   20% {
     height: 300px;
     width: 300px;
-    transform: translate(-50% ,-50%);
+    top: 50%;
   }
 
-  40% {
+  30% {
     height: 300px;
     width: 300px;
-    transform: translate(-50% ,-50%);
+    top: 50%;
 
   }
 
-  70% {
+  50% {
     width: 2000px;
     height: 2000px;
-    transform: translate(-50% ,-50%);
+    top: 50%;
   }
 
+  60% {
+    width: 2000px;
+    height: 2000px;
+    top: 50%;
+  }
+  
+
+  85% {
+    width: 2000px;
+    height: 2000px;
+    top: -200vh;
+  }
   100% {
     width: 2000px;
     height: 2000px;
-    transform: translate(-50% ,-100vh);
+    top: -200vh;
+    display: none;
   }
 }
 
