--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+  font-family: 'Montserrat', sans-serif
+}
+
 .nav-link {
   color: white !important;
 }
@@ -83,12 +87,6 @@ a {
    transition: transform 0.5s ease-in-out;
    transform: scaleX(0);
 }
-
-
-
-
-
-
 
 
 .custom-animation {
